# olio-ohjelmointi

./: README.md
Tehtävä 1/: CMakeLists.txt  main.cpp
Tehtävä 2/: game.cpp  game.h  main.cpp
Tehtävä 3/: Chef.cpp  Chef.h  main.cpp
Tehtävä 4/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Tehtävä 5/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Tehtävä 6/: main.cpp  student.cpp  student.h
Tehtävä 7/: README.md  laskin.cpp  laskin.h  laskin.ui  main.cpp
Tehtävä 8/: README.md  main.cpp  shakkikello.cpp  shakkikello.h  shakkikello.ui
